[project]
name = "easypred"
version = "0.1.0"
description = "Easily store, assess and compare predictions obtained through Machine Learning models."
readme = "readme.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
keywords = ["easypred", "prediction", "score", "fitted values"]
authors = [{ name = "Filippo Pisello" }, { email = "filippo.pisello@live.it" }]
mainteiners = [
  { name = "Filippo Pisello" },
  { email = "filippo.pisello@live.it" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.10", "pandas>=1.1.0", "matplotlib>=3"]

[project.urls]
documentation = "https://readthedocs.org/projects/easypred/"
repository = "https://github.com/FilippoPisello/EasyPred"
